main.tf
# configure version of aws provider plugin
# https://developer.hashicorp.com/terraform/language/terraform#terraform
terraform {
  required_providers {
    aws = {
      source  = "hashicorp/aws"
      version = "~> 5.0"
    }
  }
}

# Configure the AWS Provider
provider "aws" {
  region = "us-west-2"
  # shared_config_files      = ["/mnt/c/Users/ultdw/.aws/config"]
  # shared_credentials_files = ["/mnt/c/Users/ultdw/.aws/credentials"]
  # profile                  = "acit4640_admin"

}

# https://developer.hashicorp.com/terraform/language/values/locals
locals {
  project_name = "lab_week_4"
}

# get the most recent ami for Ubuntu 24.04 owned by amazon
# https://registry.terraform.io/providers/hashicorp/aws/latest/docs/data-sources/ami
data "aws_ami" "ubuntu" {
  most_recent = true
  owners      = ["amazon"]
  filter {
    name   = "name"
    values = ["ubuntu/images/hvm-ssd-gp3/ubuntu-noble-24.04-amd64-server-*"]
  }
}

# Create a VPC
# https://registry.terraform.io/providers/hashicorp/aws/latest/docs/resources/vpc
resource "aws_vpc" "web" {
  cidr_block           = "10.0.0.0/16"
	enable_dns_hostnames = true

  tags = {
    Name    = "project_vpc"
    # add project name using local
		Project = local.project_name
  }
}

# Create a public subnet
# https://registry.terraform.io/providers/hashicorp/aws/latest/docs/resources/subnet
# To use the free tier t2.micro ec2 instance you have to declare an AZ
# Some AZs do not support this instance type
resource "aws_subnet" "web" {
  vpc_id                  = aws_vpc.web.id
  cidr_block              = "10.0.1.0/24"
	# set availability zone
  availability_zone = "us-west-2a"
	# add public ip on launch
  map_public_ip_on_launch = true

  tags = {
    Name = "Web"
		# add project name using local
    Project = local.project_name
  }
}

# Create internet gateway for VPC
# https://registry.terraform.io/providers/hashicorp/aws/latest/docs/resources/internet_gateway
resource "aws_internet_gateway" "web-gw" {
	# add vpc
  vpc_id = aws_vpc.web.id

  tags = {
    Name = "Web"
		# add project name using local
    Project = local.project_name

  }
}

# create route table for web VPC 
# https://registry.terraform.io/providers/hashicorp/aws/latest/docs/resources/route_table
resource "aws_route_table" "web" {
	# add vpc 
  vpc_id = aws_vpc.web.id
  tags = {
    Name = "web-route"
		# add project name using local
    Project = local.project_name
  }
}

# add route to to route table
# https://registry.terraform.io/providers/hashicorp/aws/latest/docs/resources/route
resource "aws_route" "default_route" {
  route_table_id         = aws_route_table.web.id
  destination_cidr_block = "0.0.0.0/0"
	# add gateway id
  gateway_id = aws_internet_gateway.web-gw.id

}

# https://registry.terraform.io/providers/hashicorp/aws/latest/docs/resources/route_table_association
resource "aws_route_table_association" "web" {
	# add subnet id
  subnet_id      = aws_subnet.web.id
  route_table_id = aws_route_table.web.id
}

# https://registry.terraform.io/providers/hashicorp/aws/latest/docs/resources/security_group
resource "aws_security_group" "web" {
  name        = "allow_ssh"
  description = "allow ssh from home and work"
	# add vpc id
  vpc_id = aws_vpc.web.id
  tags = {
    Name = "Web"
		# add project name using local
    Project = local.project_name
  }
}

# Allow ssh
# https://registry.terraform.io/providers/hashicorp/aws/latest/docs/resources/vpc_security_group_ingress_rule
resource "aws_vpc_security_group_ingress_rule" "web-ssh" {
  security_group_id = aws_security_group.web.id

  # allow ssh anywhere
  cidr_ipv4        = "0.0.0.0/0"
  from_port        = 22
  ip_protocol      = "tcp"
  to_port          = 22
}

# allow http
# https://registry.terraform.io/providers/hashicorp/aws/latest/docs/resources/vpc_security_group_ingress_rule
resource "aws_vpc_security_group_ingress_rule" "web-http" {
  security_group_id = aws_security_group.web.id

	# allow http anywhere
  cidr_ipv4        = "0.0.0.0/0"
  from_port        = 80
  ip_protocol      = "tcp"
  to_port          = 80
}

# allow all out
# https://registry.terraform.io/providers/hashicorp/aws/latest/docs/resources/vpc_security_group_egress_rule
resource "aws_vpc_security_group_egress_rule" "web-egress" {
  security_group_id = aws_security_group.web.id

  cidr_ipv4   = "0.0.0.0/0"
  ip_protocol = -1
}

# use an existing key pair on host machine with file func
# if we weren't adding the public key in the cloud-init script we could import a public 
# using the aws_key_pair resource block
# https://registry.terraform.io/providers/hashicorp/aws/latest/docs/resources/key_pair
# resource "aws_key_pair" "local_key" {
#   key_name   = "web-key"
#   public_key = file("~/.ssh/aws.pub")
# }

# create the ec2 instance
# https://registry.terraform.io/providers/hashicorp/aws/latest/docs/resources/instance
resource "aws_instance" "web" {
	# use ami provided by data block above
  ami = data.aws_ami.ubuntu.id
  # set instance type
  instance_type = "t2.micro"
	# add user datat for cloud-config file in scripts directory
  user_data = file("./cloud-config.yaml")
	# add vpc security group 
  vpc_security_group_ids = [aws_security_group.web.id]

  subnet_id              = aws_subnet.web.id

  tags = {
    Name = "Web"
		# add project name using local
    Project = local.project_name
  }
}

# print public ip and dns to terminal
# https://developer.hashicorp.com/terraform/language/values/outputs
output "instance_ip_addr" {
  description = "The public IP and dns of the web ec2 instance."
  value = {
    "public_ip" = aws_instance.web.public_ip
    "dns_name"  = aws_instance.web.public_dns
  }
}
